--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 server.port = 1001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/policetrack
+spring.datasource.url=jdbc:mysql://localhost:3306/policetrack1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password= 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
